# tipg

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  PROGRESS.md  README.md  pg-tikv-admin
docker/: Dockerfile.test  README.md  docker-compose.test.yml
docs/: NEON_TUTORIAL_ASSESSMENT.md  README.md  add_new_test.md  admin-cli.md  architecture.md  authentication.md  configuration.md  multi-tenancy.md  quickstart.md  sql-reference.md
examples/: fancy_demo.sql
orm-tests/: COMPATIBILITY.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
orm-tests/drizzle/: advanced.test.ts  client.ts  connection.test.ts  crud.test.ts  schema.ts  transaction.test.ts
orm-tests/knex/: advanced.test.ts  client.ts  crud.test.ts  (+4 more)
scripts/: integration_test.py  integration_test.sh  pg_tikv_admin.py  test_pg_tikv_admin.py
src/: main.rs  pool.rs  tls.rs
tests/: 01_ddl_basic.errors  01_ddl_basic.sql  01_ddl_basic.sql.out  02_dml_crud.sql  02_dml_crud.sql.out  03_schema_evolution.sql  03_schema_evolution.sql.out  04_returning.sql  04_returning.sql.out  05_transaction.sql  05_transaction.sql.out  06_composite_pk.errors  06_composite_pk.sql  06_composite_pk.sql.out  07_order_limit.sql  07_order_limit.sql.out  08_aggregation.sql  08_aggregation.sql.out  09_index.errors  09_index.sql  09_index.sql.out  10_index_scan.sql  10_index_scan.sql.out  11_group_by.sql  11_group_by.sql.out  12_tpcc_basic.sql  13_pg_functions.sql  14_pessimistic_txn.sql  15_uuid.sql  16_dvdrental_compat.sql  17_dvdrental.sql  17_dvdrental.sql.out  17_dvdrental_setup.sql  18_window_functions.sql  18_window_functions.sql.expected  19_subqueries.sql  20_cte.sql  21_views.sql  22_new_features.sql  23_rbac.sql  (+25 more)
(+58 files in other folders)
