[package]
name = "pg-tikv"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# TiKV Client (from master for Keyspace support)
tikv-client = { git = "https://github.com/tikv/client-rust.git", branch = "master" }

# SQL Parser (standalone, no execution engine)
sqlparser = { version = "0.40", features = ["visitor"] }

# Postgres Protocol
pgwire = "0.28"

# TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
chrono = "0.4"
regex = "1.10"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
